# NGEC-2025

./: README.md  pyproject.toml  requirements.txt
NGEC/: .gitignore  actor_resolution.py  attribute_model.py  geolocation.py  requirements.txt
NGEC/assets/: PLOVER_agents.txt  PLOVER_structured_codebook_updated.csv  xgb_model.json
setup/train_wiki_model/: eval_wiki_model.py  train_wiki_model.py
setup/wiki/: load_wiki_es.py
