[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ngec"
version = "0.1.0" # Placeholder version, should be updated for releases
authors = [
    { name="Your Name", email="your.email@example.com" }, # Replace with actual author
]
description = "A short description of NGEC" # Replace with actual description
readme = "README.md"
requires-python = ">=3.7" # Assuming Python 3.7+ compatibility
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", # Assuming MIT License, adjust if different
    "Operating System :: OS Independent",
]
dependencies = [
    'accelerate==0.34.2',
    'aiohttp==3.8.4',
    'aiosignal==1.3.1',
    'altair==4.2.2',
    'anyio==4.2.0',
    'anytree==2.12.1',
    'appdirs==1.4.4',
    'asttokens==2.2.1',
    'async-timeout==4.0.2',
    'attrs==22.2.0',
    'auto-gptq==0.4.2',
    'backcall==0.2.0',
    'beautifulsoup4==4.12.3',
    'bert-score==0.3.13',
    'bitsandbytes==0.46.1',
    'blinker==1.5',
    'blis==0.7.9',
    'boto3==1.34.106',
    'botocore==1.34.106',
    'bpemb==0.3.5',
    'cachetools==5.3.0',
    'catalogue==2.0.8',
    'certifi',
    'charset-normalizer==3.0.1',
    'cleanlab==2.6.4',
    'click==8.1.3',
    'cloudpathlib==0.16.0',
    'coloredlogs==15.0.1',
    'confection==0.0.4',
    'conllu==4.5.3',
    'contourpy==1.0.7',
    'ctransformers==0.2.14',
    'cupy-cuda12x==11.5.0',
    'cupy-wheel==11.5.0',
    'curated-tokenizers==0.0.9',
    'curated-transformers==0.1.1',
    'cycler==0.11.0',
    'cymem==2.0.7',
    'cytoolz==0.12.1',
    'dataclasses-json==0.5.9',
    'datasets==3.0.0',
    'dateparser==1.1.7',
    'decorator==5.1.1',
    'Deprecated==1.2.14',
    'dill==0.3.6',
    'diskcache==5.6.1',
    'distro==1.9.0',
    'docker-pycreds==0.4.0',
    'docopt==0.6.2',
    'docstring-parser==0.15',
    'editdistance==0.8.1',
    'einops==0.7.0',
    'elasticsearch==7.17.9',
    'elasticsearch-dsl==7.4.1',
    'en-core-web-lg',
    'en-core-web-sm',
    'en-core-web-trf',
    'entrypoints==0.4',
    'evaluate==0.4.0',
    'exceptiongroup==1.1.1',
    'executing==1.2.0',
    'faiss==1.7.4',
    'fastrlock==0.8.1',
    'filelock==3.9.0',
    'flair==0.13.1',
    'fonttools==4.39.4',
    'frozenlist==1.3.3',
    'fsspec==2024.6.0',
    'ftfy==6.2.0',
    'gdown==5.2.0',
    'gensim==4.3.2',
    'gitdb==4.0.10',
    'GitPython==3.1.31',
    'gpt4all==1.0.5',
    'gptq==0.0.3',
    'graphviz==0.21',
    'greenlet==2.0.2',
    'h11==0.14.0',
    'haversine==2.8.0',
    'hf-xet==1.1.5',
    'httpcore==1.0.3',
    'httpx==0.26.0',
    'huggingface-hub==0.33.4',
    'humanfriendly==10.0',
    'idna==3.4',
    'importlib-metadata==6.0.0',
    'iniconfig==2.0.0',
    'ipython==8.11.0',
    'Janome==0.5.0',
    'jedi==0.18.2',
    'jellyfish==0.9.0',
    'jieba==0.42.1',
    'Jinja2==3.1.2',
    'jmespath==1.0.1',
    'joblib==1.2.0',
    'jsonable==0.3.1',
    'jsonlines==3.1.0',
    'jsonschema==4.17.3',
    'kiwisolver==1.4.4',
    'langchain==0.0.238',
    'langchainplus-sdk==0.0.20',
    'langcodes==3.3.0',
    'langdetect==1.0.9',
    'langsmith==0.0.12',
    'language-tool-python==2.8',
    'lemminflect==0.2.3',
    'lightgbm==4.1.0',
    'llama-cpp-python==0.1.74',
    'lru-dict==1.3.0',
    'lxml==5.2.2',
    'markdown-it-py==2.2.0',
    'MarkupSafe==2.1.2',
    'marshmallow==3.19.0',
    'marshmallow-enum==1.5.1',
    'matplotlib==3.7.1',
    'matplotlib-inline==0.1.6',
    'mdurl==0.1.2',
    'mordecai3',
    'more-itertools==10.2.0',
    'mpld3==0.5.10',
    'mpmath==1.3.0',
    'multidict==6.0.4',
    'multiprocess==0.70.14',
    'murmurhash==1.0.9',
    'mwcli==0.0.3',
    'mwparserfromhell==0.6.4',
    'mwtypes==0.3.2',
    'mwxml==0.3.3',
    'mypy-extensions==1.0.0',
    'networkx==3.0',
    'nltk==3.8.1',
    'num2words==0.5.13',
    'numexpr==2.8.4',
    'numpy==1.25.1',
    'nvidia-cublas-cu11==11.10.3.66',
    'nvidia-cublas-cu12==12.6.4.1',
    'nvidia-cuda-cupti-cu12==12.6.80',
    'nvidia-cuda-nvrtc-cu11==11.7.99',
    'nvidia-cuda-nvrtc-cu12==12.6.77',
    'nvidia-cuda-runtime-cu11==11.7.99',
    'nvidia-cuda-runtime-cu12==12.6.77',
    'nvidia-cudnn-cu11==8.5.0.96',
    'nvidia-cudnn-cu12==9.5.1.17',
    'nvidia-cufft-cu12==11.3.0.4',
    'nvidia-cufile-cu12==1.11.1.6',
    'nvidia-curand-cu12==10.3.7.77',
    'nvidia-cusolver-cu12==11.7.1.2',
    'nvidia-cusparse-cu12==12.5.4.2',
    'nvidia-cusparselt-cu12==0.6.3',
    'nvidia-nccl-cu12==2.26.2',
    'nvidia-nvjitlink-cu12==12.6.85',
    'nvidia-nvtx-cu12==12.6.77',
    'openai==1.12.0',
    'openapi-schema-pydantic==1.2.4',
    'OpenHowNet==2.0',
    'openTSNE==1.0.1',
    'optimum==1.13.2',
    'packaging==23.0',
    'pandas==1.5.3',
    'para==0.0.8',
    'parso==0.8.3',
    'pathtools==0.1.2',
    'pathy==0.10.1',
    'peft==0.5.0',
    'pexpect==4.8.0',
    'pickleshare==0.7.5',
    'Pillow==9.4.0',
    'pinyin==0.4.0',
    'plac==1.3.5',
    'plotly==5.22.0',
    'pluggy==1.0.0',
    'pptree==3.1',
    'preshed==3.0.8',
    'prompt-toolkit==3.0.38',
    'protobuf==3.20.3',
    'psutil==5.9.4',
    'ptyprocess==0.7.0',
    'pulearn==0.0.9',
    'pure-eval==0.2.2',
    'pyarrow==17.0.0',
    'pybind11==2.10.3',
    'pydantic==1.10.5',
    'pydeck==0.8.0',
    'Pygments==2.14.0',
    'pyinflect==0.5.1',
    'pylcs==0.0.8',
    'Pympler==1.0.1',
    'pyparsing==3.0.9',
    'pyphen==0.13.2',
    'pyrsistent==0.19.3',
    'PySocks==1.7.1',
    'pytest==7.2.2',
    'python-dateutil==2.8.2',
    'pytorch_revgrad==0.2.0',
    'pytz==2022.7.1',
    'pytz-deprecation-shim==0.1.0.post0',
    'PyYAML==6.0',
    'rank-bm25==0.2.2',
    'redis==4.5.1',
    'regex==2022.10.31',
    'requests==2.32.3',
    'responses==0.18.0',
    'rich==13.3.1',
    'rouge==1.0.1',
    's3transfer==0.10.1',
    'safetensors==0.4.5',
    'scikit-learn==1.4.2',
    'scipy==1.10.1',
    'segtok==1.5.11',
    'semver==3.0.2',
    'sentence-transformers==5.0.0',
    'sentencepiece==0.1.97',
    'sentry-sdk==1.16.0',
    'setfit==1.1.0',
    'setproctitle==1.3.2',
    'shtab==1.6.4',
    'simpledorff==0.0.2',
    'six==1.16.0',
    'skops==0.6.0',
    'smart-open==6.3.0',
    'smmap==5.0.0',
    'sniffio==1.3.0',
    'soupsieve==2.5',
    'spacy==3.7.4',
    'spacy-alignments==0.9.0',
    'spacy-curated-transformers==0.2.2',
    'spacy-legacy==3.0.12',
    'spacy-loggers==1.0.4',
    'spacy-streamlit==1.0.6',
    'spacy-transformers==1.3.2',
    'SQLAlchemy==2.0.18',
    'sqlitedict==2.1.0',
    'srsly==2.4.6',
    'stack-data==0.6.2',
    'streamlit==1.25.0',
    'sympy==1.14.0',
    'tabulate==0.9.0',
    'tenacity==8.2.2',
    'termcolor==2.4.0',
    'terminaltables==3.1.10',
    'textacy==0.12.0',
    'textattack==0.3.10',
    'thinc==8.2.3',
    'threadpoolctl==3.1.0',
    'tokenizers==0.21.2',
    'toml==0.10.2',
    'tomli==2.0.1',
    'toolz==0.12.0',
    'torch==2.7.1',
    'torchaudio==2.7.1',
    'torchvision==0.22.1',
    'tornado==6.2',
    'tqdm==4.66.5',
    'traitlets==5.9.0',
    'transformer-smaller-training-vocab==0.4.0',
    'transformers==4.53.2',
    'triton==3.3.1',
    'trl==0.7.2',
    'typer==0.7.0',
    'typing-inspect==0.9.0',
    'typing_extensions==4.14.1',
    'tyro==0.5.11',
    'tzdata==2022.7',
    'tzlocal==4.2',
    'Unidecode==1.3.6',
    'urllib3==1.26.14',
    'validators==0.20.0',
    'wandb==0.13.11',
    'wasabi==1.1.1',
    'watchdog==2.3.1',
    'wcwidth==0.2.13',
    'weasel==0.3.3',
    'Wikidata==0.7.0',
    'Wikipedia-API==0.6.0',
    'word2number==1.1',
    'wrapt==1.16.0',
    'xgboost==3.0.2',
    'xlrd==2.0.1',
    'xmltodict==0.13.0',
    'xxhash==3.2.0',
    'yarl==1.8.2',
    'zipp==3.15.0'
]

[tool.setuptools.packages.find]
where = ["."] # Search for packages in the current directory

[tool.setuptools.package-data]
ngec = [
    "assets/*",
    "assets/event_models/*",
    "actor_sim_model2/*",
    "actor_sim_model2/1_Pooling/*",
    "actor_sim_model2/eval/*"
]