[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ngec"
version = "0.1.0" 
authors = [
    { name="Andy Halterman", email="ahalterman0@gmail.com" }, 
]
description = "A pipeline for coding political events from text" 
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", 
    "Operating System :: OS Independent",
]
dependencies = [
    'dateparser==1.2.2',
    'elasticsearch==7.17.9',
    'elasticsearch-dsl==7.4.1',
    'flash-attn==2.8.2',
    'jsonlines==4.0.0',
    'numpy==2.2.6',
    'pandas==2.3.1',
    'pylcs==0.1.1',
    'rich==14.1.0',
    'scikit_learn==1.7.1',
    'scipy==1.15.3',
    'sentence_transformers==5.0.0',
    'skops==0.13.0',
    'spacy==3.8.7',
    'en_core_web_lg==3.8.0',
    #'en_core_web_lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl#sha256=293e9547a655b25499198ab15a525b05b9407a75f10255e405e8c3854329ab63',
    'textacy',
    'torch==2.7.1',
    'tqdm==4.67.1',
    'transformers==4.53.3',
    'Unidecode==1.4.0',
    'vllm==0.10.0',
    'xgboost==3.0.0'
]

[tool.setuptools.packages.find]
where = ["."] # Search for packages in the current directory

[tool.setuptools.package-data]
ngec = [
    "assets/*",
    "assets/**/*",  
    "assets/event_models/*",
    "actor_sim_model2/*",
    "actor_sim_model2/1_Pooling/*",
    "actor_sim_model2/eval/*"
]
