[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "NGEC"
version = "0.1.0" 
authors = [
    { name="Andy Halterman", email="ahalterman0@gmail.com" }, 
]
description = "A pipeline for coding political events from text" 
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", 
    "Operating System :: OS Independent",
]
dependencies = [
    'dateparser>=1.2.0,<2.0',
    'jsonlines>=4.0.0,<5.0', 
    'numpy>=2.0.0,<3.0',  
    'pandas>=2.2.0,<3.0',  
    'rich>=14.0.0,<15.0',
    'scikit_learn>=1.6.0,<2.0',  
    'tqdm>=4.60.0,<5.0',
    'Unidecode>=1.4.0,<2.0',
    'xgboost>=3.0.0,<4.0',  
    'torch>=2.6.0,<3.0',
    'transformers>=4.53.3,<5.0',
    'sentence_transformers>=5.0.0,<6.0',
    'vllm>=0.10.0,<1.0',
    'flash-attn>=2.7.1,<=2.8.0', # xformers requirement
    'elasticsearch==7.17.9',
    'elasticsearch-dsl==7.4.1',
    'spacy==3.8.7',
    'pylcs>=0.1.1,<1.0',
    'skops>=0.13.0,<1.0',
    'textacy>=0.13.0,<1.0',
]

[tool.setuptools.packages.find]
where = ["."] # Search for packages in the current directory

[tool.setuptools.package-data]
NGEC = [
    "assets/*",
    "assets/**/*",  
    "assets/event_models/*",
    "actor_sim_model2/*",
    "actor_sim_model2/1_Pooling/*",
    "actor_sim_model2/eval/*"
]
